--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,12 @@
 ---
-title: Boostrap Index
+title: 首頁
 layout: ./app/layout.ejs
 engine: ejs
-current: index
----
  
+---
+
+<div class="header container">
+    <div class="headerimg">
+
+    </div>
+</div>
