--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,9 @@ engine: ejs
                 <div class="boxdot bg-light position-absolute top-0 start-100 translate-middle"></div>
                 <div class="boxdot bg-light position-absolute top-100 start-0 translate-middle"></div>
                 <div class="boxdot bg-light position-absolute top-100 start-100 translate-middle"></div>
-                <h1 class="fw-bold mb-0 text-center gradienttitle">全台最豐富的程式家教</h1>
+                <h1 class="fw-bold text-center gradienttitle">全台最豐富的程式家教</h1>
                 <h1 class="fw-bold mb-0 text-light text-center">在實踐中化理想為現實</h1>
-                <h6 class="fs-7 mb-0 mt-6 text-light text-center">全台最專業師資｜到府程式家教｜客製化課程</h6>
+                <h6 class="fs-8 mb-0 mt-6 text-light text-center">全台最專業師資｜到府程式家教｜客製化課程</h6>
             </div>
             </div>
     </div>
@@ -66,11 +66,125 @@ engine: ejs
 
 <section class="classprocess my-6">
     <div class="container">
-        <h2 class="fw-bold fs-4 text-light text-center">預期上課流程</h2>
+        <h2 class="fw-bold fs-4 text-light text-center title">預期上課流程</h2>
 
-        <div class="row">
-            <div class="col-md-4"></div>
+        <div class="row my-6">
+            <div class="col-md-3">
+                <div class="card border px-5 position-relative">
+                    <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">01</h3>
+                    <h4 class="text-light fs-6 fw-bold pt-6 pb-3">預約</h4>
+                    <p class="text-light fs-8 pb-2 ">線上預約指定課程與老師<br>由老師安排專屬課程</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card border px-5 position-relative">
+                    <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">02</h3>
+                    <h4 class="text-light fs-6 fw-bold pt-6 pb-3">付款</h4>
+                    <p class="text-light fs-8 pb-2 ">支援各種支付方式<br>提供12期分期付款</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card border px-5 position-relative">
+                    <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">03</h3>
+                    <h4 class="text-light fs-6 fw-bold pt-6 pb-3">上課</h4>
+                    <p class="text-light fs-8 pb-2 ">地點由您指定 <br>密集性一對一教學</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card border px-5 position-relative">
+                    <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">04</h3>
+                    <h4 class="text-light fs-6 fw-bold pt-6 pb-3">提供滿意度</h4>
+                    <p class="text-light fs-8 pb-2 ">提供課程滿意度及回饋<br>讓我們持續成長與進步</p>
+                </div>
+            </div>
         </div>
     </div>
 
+</section>
+
+<section class="programbanner my-6 py-6">
+    <h2 class="fw-bold fs-4 text-light text-center title">你想要學習的程式，都在這裡</h2>
+    <div class="codebar mt-6 text-center d-md-flex multiple-items">
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">JavaScript</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">HTML/CSS</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">SQL</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Python</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">C++</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">PHP</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
+    </div>
+</section>
+
+<section class="hotclass my-4">
+    <h2 class="fw-bold fs-4 text-light text-center title">熱門推薦課程</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 card text-light p-0 my-4">
+                <div class="card-body">
+                    <div class="teacherinfo text-center">
+                        <img src="./assets/images/teacher01.jpg" alt="">
+                        <p class="fs-8 p-2">Belinda</p>
+                    </div>
+                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
+                    <h5 class="text-primary fs-8">前端語言</h5>
+                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
+                </div>
+                <div class="card-footer p-0 ">
+                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
+                </div>
+            </div>
+            <!-- 第二張卡片 -->
+            <div class="col-md-3 card text-light p-0 my-4 mx-3">
+                <div class="card-body">
+                    <div class="teacherinfo text-center">
+                        <img src="./assets/images/teacher01.jpg" alt="">
+                        <p class="fs-8 p-2">Belinda</p>
+                    </div>
+                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
+                    <h5 class="text-primary fs-8">前端語言</h5>
+                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
+                </div>
+                <div class="card-footer p-0 ">
+                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
+                </div>
+            </div>
+            <!-- 第3張卡片 -->
+            <div class="col-md-3 card text-light p-0 my-4">
+                <div class="card-body">
+                    <div class="teacherinfo text-center">
+                        <img src="./assets/images/teacher01.jpg" alt="">
+                        <p class="fs-8 p-2">Belinda</p>
+                    </div>
+                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
+                    <h5 class="text-primary fs-8">前端語言</h5>
+                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
+                </div>
+                <div class="card-footer p-0 ">
+                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
+                </div>
+            </div>
+            <!-- 第4張卡片 -->
+            <div class="col-md-3 card text-light p-0">
+                <div class="card-body">
+                    <div class="teacherinfo text-center">
+                        <img src="./assets/images/teacher01.jpg" alt="">
+                        <p class="fs-8 p-2">Belinda</p>
+                    </div>
+                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
+                    <h5 class="text-primary fs-8">前端語言</h5>
+                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
+                </div>
+                <div class="card-footer p-0 ">
+                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="show text-center m-6">
+        <input class="btn mx-0 text-light px-4 py-2   showclassbtn border-0" type="button" value="所有課程列表">
+    </div>    
 </section>
