--- a/app/index.html
+++ b/app/index.html
@@ -105,86 +105,186 @@ engine: ejs
 <section class="programbanner my-6 py-6">
     <h2 class="fw-bold fs-4 text-light text-center title">你想要學習的程式，都在這裡</h2>
     <div class="codebar mt-6 text-center d-md-flex multiple-items">
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">JavaScript</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">HTML/CSS</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">SQL</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Python</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">C++</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">PHP</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
-        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="submit">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">JavaScript</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">HTML/CSS</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">SQL</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Python</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">C++</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">PHP</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
+        <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
     </div>
 </section>
 
 <section class="hotclass my-4">
     <h2 class="fw-bold fs-4 text-light text-center title">熱門推薦課程</h2>
     <div class="container">
-        <div class="row">
-            <div class="col-md-3 card text-light p-0 my-4">
-                <div class="card-body">
-                    <div class="teacherinfo text-center">
-                        <img src="./assets/images/teacher01.jpg" alt="">
-                        <p class="fs-8 p-2">Belinda</p>
+        <div class="row mt-6 ">
+            <div class="col-md-3">
+                <div class="card text-light">
+                        <div class="teacherinfo text-center pt-3">
+                            <img src="./assets/images/teacher01.jpg" alt="">
+                            <p class="fs-8 p-2">Belinda</p>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="fs-7 py-2 fw-bold pt-0 mb-0">基礎前端 - HTML<BR></h4>
+                            <h5 class="text-primary fs-8 py-5">前端語言</h5>
+                            <p class="text-ligh fs-8 mb-0">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
+                        </div>
+                    <div class="card-footer p-0">
+                        <p class="text-center fs-8 m-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
                     </div>
-                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
-                    <h5 class="text-primary fs-8">前端語言</h5>
-                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
-                </div>
-                <div class="card-footer p-0 ">
-                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
                 </div>
             </div>
             <!-- 第二張卡片 -->
-            <div class="col-md-3 card text-light p-0 my-4 mx-3">
-                <div class="card-body">
-                    <div class="teacherinfo text-center">
-                        <img src="./assets/images/teacher01.jpg" alt="">
-                        <p class="fs-8 p-2">Belinda</p>
+            <div class="col-md-3">
+                <div class="card text-light">
+                        <div class="teacherinfo text-center pt-3">
+                            <img src="./assets/images/teacher02.jpg" alt="">
+                            <p class="fs-8 p-2">Belinda</p>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="fs-7 py-2 fw-bold pt-0 mb-0">2022 Python 全攻略｜從入門到實務</h4>
+                            <h5 class="text-primary fs-8 py-5">前端語言</h5>
+                            <p class="text-ligh fs-8 mb-0">Python支援多種程式設計範式，包括函數式、指令式、反射式、結構化和物件導向程式設計，它擁有動態...</p>
+                        </div>
+                    <div class="card-footer p-0">
+                        <p class="text-center fs-8 m-2">50分鐘<span class="price fs-4 px-2">NT$2200</span></p>
                     </div>
-                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
-                    <h5 class="text-primary fs-8">前端語言</h5>
-                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
-                </div>
-                <div class="card-footer p-0 ">
-                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
                 </div>
             </div>
             <!-- 第3張卡片 -->
-            <div class="col-md-3 card text-light p-0 my-4">
-                <div class="card-body">
-                    <div class="teacherinfo text-center">
-                        <img src="./assets/images/teacher01.jpg" alt="">
-                        <p class="fs-8 p-2">Belinda</p>
+            <div class="col-md-3">
+                <div class="card text-light">
+                        <div class="teacherinfo text-center pt-3">
+                            <img src="./assets/images/teacher03.jpg" alt="">
+                            <p class="fs-8 p-2">Belinda</p>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="fs-7 py-2 fw-bold pt-0 mb-0">活用 Line Bot ｜APP 開發到上架完整實戰攻略</h4>
+                            <h5 class="text-primary fs-8 py-5">前端語言</h5>
+                            <p class="text-ligh fs-8 mb-0">Line Bot 可用於實用的目的，如客戶服務或資訊獲取，有些聊天機器人會搭載自然語言處理系統，但大多簡...</p>
+                        </div>
+                    <div class="card-footer p-0">
+                        <p class="text-center fs-8 m-2">50分鐘<span class="price fs-4 px-2">NT$1800</span></p>
                     </div>
-                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
-                    <h5 class="text-primary fs-8">前端語言</h5>
-                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
-                </div>
-                <div class="card-footer p-0 ">
-                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
                 </div>
             </div>
             <!-- 第4張卡片 -->
-            <div class="col-md-3 card text-light p-0">
-                <div class="card-body">
-                    <div class="teacherinfo text-center">
-                        <img src="./assets/images/teacher01.jpg" alt="">
-                        <p class="fs-8 p-2">Belinda</p>
+            <div class="col-md-3">
+                <div class="card text-light">
+                        <div class="teacherinfo text-center pt-3">
+                            <img src="./assets/images/teacher04.jpg" alt="">
+                            <p class="fs-8 p-2">Belinda</p>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="fs-7 py-2 fw-bold pt-0 mb-0">Linux 零基礎七天入門｜入門到實務</h4>
+                            <h5 class="text-primary fs-8 py-5">作業系統與伺服器</h5>
+                            <p class="text-ligh fs-8 mb-0">Linux是一種自由和開放原始碼的類UNIX作業系統，作業系統中包含了許多使用者圖形介面和其他實用...</p>
+                        </div>
+                    <div class="card-footer p-0">
+                        <p class="text-center fs-8 m-2">50分鐘<span class="price fs-4 px-2">NT$1100</span></p>
                     </div>
-                    <h4 class="fs-7 py-3 fw-bold">基礎前端 - HTML</h4>
-                    <h5 class="text-primary fs-8">前端語言</h5>
-                    <p class="fs-8 text-light">帶領無基礎的平民老百姓，從最基礎的 HTML 語法出發，使用最淺顯易懂的語言與生活隨處可見的例子...</p>
-                </div>
-                <div class="card-footer p-0 ">
-                    <p class="text-center fs-8 mb-0 py-2">50分鐘<span class="price fs-4 px-2">NT$1600</span></p>
                 </div>
             </div>
+
         </div>
     </div>
     <div class="show text-center m-6">
         <input class="btn mx-0 text-light px-4 py-2   showclassbtn border-0" type="button" value="所有課程列表">
     </div>    
+</section>
+<!-- 
+<section class="adsbanner my-6">   
+    <div class="d-md-flex ">
+        <div class="flex-item justify-content-between">
+            <div class="photoimg--1 position-relative">
+                <div class="slogen position-absolute  p-5">
+                    <span class="material-symbols-outlined  fs-3">
+                        forum
+                        </span>
+                    <h4 class="text-light fs-5 fw-bold">對症下藥，專案製作</h4>
+                    <h5 class="text-light fs-8">除了可以瘋狂提問之外 <br>還有機會一起完成專案</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</section> -->
+
+<section class="infobanner mt-6">
+    <div class="infomation d-md-flex">
+        <div class="cards flex-item">
+            <div class="content">
+                <div class="info01 position-relative">
+                <div class="cardtext  position-absolute">
+                    <span class="material-symbols-outlined fs-3 infoicon">
+                        forum
+                        </span>
+                    <h4 class="text-light fs-5 fw-bold">對症下藥，專案製作</h4>    
+                    <h5 class="fs-8 pt-3">除了可以瘋狂提問之外 <br>還有機會一起完成專案</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards flex-item">
+            <div class="content">
+                <div class="info02 position-relative">
+                <div class="cardtext  position-absolute">
+                    <span class="material-symbols-outlined fs-3 infoicon">
+                        tips_and_updates
+                        </span>
+                    <h4 class="text-light fs-5 fw-bold">激發你的學習潛力</h4>    
+                    <h5 class="fs-8 pt-3">進度制課程安排&個人化學習建議  <br>有效管理你的學習動力</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards flex-item">
+            <div class="content">
+                <div class="info03 position-relative">
+                <div class="cardtext  position-absolute">
+                    <span class="material-symbols-outlined fs-3 infoicon">
+                        thumb_up_off
+                        </span>
+                    <h4 class="text-light fs-5 fw-bold">學習效率</h4>    
+                    <h5 class="fs-8 pt-3">除了可以瘋狂提問之外 <br>還有機會一起完成專案</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards flex-item">
+            <div class="content">
+                <div class="info04 position-relative">
+                <div class="cardtext  position-absolute">
+                    <span class="material-symbols-outlined fs-3 infoicon">
+                        group
+                        </span>
+                    <h4 class="text-light fs-5 fw-bold">一對一指導</h4>    
+                    <h5 class="fs-8 pt-3">針對目的進行客製化課程安排  <br>快速的學以致用</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="articalshare pt-6 mt-0">
+    <div class="container">
+        <h2 class="text-light text-center fs-5 fw-bold title mb-6">文章分享</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cards">
+                    <img src="./assets/images/article01.jpg" class="card-img-top p-3" alt="car">
+                    <div class="card-body">
+                        <h5 class="card-title text-light fs-7">Card title</h5>
+                        <p class="card-text text-light fs-8">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                         
+                    </div>
+
+                </div>
+            </div>
+        </div>
 </section>
