--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@ engine: ejs
     </div>
 </header>
 
-<section class="introbanner p-6 ">
+<section class="introbanner py-6 ">
     <div class="container">
         <div class="d-flex justify-content-between align-items-center">
             <div class="introbanner_title col-md-2">
@@ -64,7 +64,7 @@ engine: ejs
     </div>
 </section>
 
-<section class="classprocess my-6">
+<section class="classprocess py-6">
     <div class="container">
         <h2 class="fw-bold fs-4 text-light text-center title">預期上課流程</h2>
 
@@ -102,7 +102,7 @@ engine: ejs
 
 </section>
 
-<section class="programbanner my-6 py-6">
+<section class="programbanner  py-6">
     <h2 class="fw-bold fs-4 text-light text-center title">你想要學習的程式，都在這裡</h2>
     <div class="codebar mt-6 text-center d-md-flex multiple-items">
         <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">JavaScript</button>
@@ -119,7 +119,7 @@ engine: ejs
     </div>
 </section>
 
-<section class="hotclass my-4">
+<section class="hotclass my-6">
     <h2 class="fw-bold fs-4 text-light text-center title">熱門推薦課程</h2>
     <div class="container">
         <div class="row mt-6 ">
@@ -324,15 +324,15 @@ engine: ejs
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
-                    <div class="carousel-inner  ">
+                    <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="./assets/images/share.jpg" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/images/share02.jpg" class="d-block cover" alt="..." width="110%">
+                        <img src="./assets/images/share02.jpg" class="d-block cover" alt="..." width="150%">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/images/share03.jpg" class="d-block " alt="..." width="130%">
+                        <img src="./assets/images/share03.jpg" class="d-block " alt="..." width="150%">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -344,10 +344,17 @@ engine: ejs
                       <span class="visually-hidden ">Next</span>
                     </button>
                   </div>
+                  <div class="studentcard  ">
+                    <div class="cards2 position-absolute position-relative" >
+                        <img src="./assets/images/student01.jpg" alt="" class="rounded-circle position-absolute top-0 translate-middle">
+                        <div class="card-body p-4 my-auto">
+                            <h5 class="fw-bold mb-3">老師很有耐心</h5>
+                            <p class="fs-8">老師手把手的細心教學，用手繪圖，以淺顯易懂的方式，讓零網頁基礎的我也能快速了解網頁的架構與原理，學網頁變得有趣多了！</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="studentcard">
-                3
-            </div>
+
 
 
         </div>
@@ -358,7 +365,22 @@ engine: ejs
 </section>
 
 
-<section class="jointeacher">
+<section class="jointeacher  mb-6 ">
+    <div class="cards d-flex justify-content-center  pt-3">
+        <span class="material-symbols-outlined text-light px-5 ">
+            menu_book
+            </span>
+        <div class="flex-item card-body ">  
+            <h1 class="text-light fs-4 fw-bold">加入我們成為導師</h1>
+            <p class="text-light fs-8">歡迎各大程式大神加入我們，用知識在世界留下一點影響力。</p>
+        </div>
+        <div class="flex-item card-body ">  
+            <div class="btnblock text-center mt-2 ">
+                <button type="button" class="btn btn-outline-light px-4">立即預約</button>
+            </div>
+        </div>
+
+    </div>
     
 
 </section>
