--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 ---
-title: 首頁
+title:  程式家教-首頁
 layout: ./app/layout.ejs
 engine: ejs
  
@@ -70,28 +70,28 @@ engine: ejs
 
         <div class="row my-6">
             <div class="col-md-3">
-                <div class="card border px-5 position-relative">
+                <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">01</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">預約</h4>
                     <p class="text-light fs-8 pb-2 ">線上預約指定課程與老師<br>由老師安排專屬課程</p>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card border px-5 position-relative">
+                <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">02</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">付款</h4>
                     <p class="text-light fs-8 pb-2 ">支援各種支付方式<br>提供12期分期付款</p>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card border px-5 position-relative">
+                <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">03</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">上課</h4>
                     <p class="text-light fs-8 pb-2 ">地點由您指定 <br>密集性一對一教學</p>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card border px-5 position-relative">
+                <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">04</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">提供滿意度</h4>
                     <p class="text-light fs-8 pb-2 ">提供課程滿意度及回饋<br>讓我們持續成長與進步</p>
@@ -141,7 +141,7 @@ engine: ejs
             </div>
             <!-- 第二張卡片 -->
             <div class="col-md-3">
-                <div class="card text-light">
+                <div class="card text-light mb-5">
                         <div class="teacherinfo text-center pt-3">
                             <img src="./assets/images/teacher02.jpg" alt="">
                             <p class="fs-8 p-2">Belinda</p>
@@ -158,7 +158,7 @@ engine: ejs
             </div>
             <!-- 第3張卡片 -->
             <div class="col-md-3">
-                <div class="card text-light">
+                <div class="card text-light mb-3">
                         <div class="teacherinfo text-center pt-3">
                             <img src="./assets/images/teacher03.jpg" alt="">
                             <p class="fs-8 p-2">Belinda</p>
@@ -194,7 +194,7 @@ engine: ejs
         </div>
     </div>
     <div class="show text-center m-6">
-        <input class="btn mx-0 text-light px-4 py-2   showclassbtn border-0" type="button" value="所有課程列表">
+        <input class="btn mx-0 text-light px-4 py-2  showclassbtn border-0" type="button" value="所有課程列表">
     </div>    
 </section>
 
@@ -365,7 +365,7 @@ engine: ejs
 </section>
 
 
-<section class="jointeacher  mb-6 ">
+<section class="jointeacher pb-6">
     <div class="cards d-flex justify-content-center  pt-3">
         <span class="material-symbols-outlined text-light px-5 ">
             menu_book
