--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@ engine: ejs
                 <div class="boxdot bg-light position-absolute top-100 start-0 translate-middle"></div>
                 <div class="boxdot bg-light position-absolute top-100 start-100 translate-middle"></div>
                 <h1 class="fw-bold text-center gradienttitle">全台最豐富的程式家教</h1>
-                <h1 class="fw-bold mb-0 text-light text-center">在實踐中化理想為現實</h1>
+                <h1 class="fw-bold text-light text-center">在實踐中化理想為現實</h1>
                 <h6 class="fs-8 mb-0 mt-6 text-light text-center">全台最專業師資｜到府程式家教｜客製化課程</h6>
             </div>
             </div>
@@ -26,7 +26,7 @@ engine: ejs
     <div class="container">
         <div class="d-md-flex   justify-content-between align-items-center">
             <div class="introbanner_title col-md-2">
-                <h2 class="fs-4 text-light fw-bold">手把手帶你<br>親自到家教到會</h2>
+                <h2 class="fs-4 text-light fw-bold title">手把手帶你<br>親自到家教到會</h2>
                 <div class="borderbottom"></div>
             </div>
             <div class="container">
@@ -122,9 +122,9 @@ engine: ejs
 <section class="hotclass my-6">
     <h2 class="fw-bold fs-4 text-light text-center title">熱門推薦課程</h2>
     <div class="container">
-        <div class="row mt-6 ">
-            <div class="col-md-3">
-                <div class="card text-light">
+        <div class="row mt-6  ">
+            <div class="col-md-3 mb-3">
+                <div class="card text-light  ">
                         <div class="teacherinfo text-center pt-3">
                             <img src="./assets/images/teacher01.jpg" alt="">
                             <p class="fs-8 p-2">Belinda</p>
@@ -140,8 +140,8 @@ engine: ejs
                 </div>
             </div>
             <!-- 第二張卡片 -->
-            <div class="col-md-3">
-                <div class="card text-light mb-5">
+            <div class="col-md-3 mb-3">
+                <div class="card text-light mb-5  mt-6">
                         <div class="teacherinfo text-center pt-3">
                             <img src="./assets/images/teacher02.jpg" alt="">
                             <p class="fs-8 p-2">Belinda</p>
@@ -157,8 +157,8 @@ engine: ejs
                 </div>
             </div>
             <!-- 第3張卡片 -->
-            <div class="col-md-3">
-                <div class="card text-light mb-3">
+            <div class="col-md-3 mb-3">
+                <div class="card text-light mb-5  mt-6">
                         <div class="teacherinfo text-center pt-3">
                             <img src="./assets/images/teacher03.jpg" alt="">
                             <p class="fs-8 p-2">Belinda</p>
@@ -174,8 +174,8 @@ engine: ejs
                 </div>
             </div>
             <!-- 第4張卡片 -->
-            <div class="col-md-3">
-                <div class="card text-light">
+            <div class="col-md-3 mb-3">
+                <div class="card text-light mb-5  mt-6">
                         <div class="teacherinfo text-center pt-3">
                             <img src="./assets/images/teacher04.jpg" alt="">
                             <p class="fs-8 p-2">Belinda</p>
@@ -366,8 +366,8 @@ engine: ejs
 
 
 <section class="jointeacher pb-6">
-    <div class="cards d-flex justify-content-center  pt-3">
-        <span class="material-symbols-outlined text-light px-5 ">
+    <div class="cards d-md-flex justify-content-center  d-sm-column pt-3">
+        <span class="material-symbols-outlined text-light px-5 text-center">
             menu_book
             </span>
         <div class="flex-item card-body ">  
