--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,17 @@ engine: ejs
     </div>
 </header>
 
-<section class="introbanner py-6 ">
+<section class="introbanner py-4">
     <div class="container">
-        <div class="d-md-flex   justify-content-between align-items-center">
-            <div class="introbanner_title col-md-2">
-                <h2 class="fs-4 text-light fw-bold title">手把手帶你<br>親自到家教到會</h2>
+        <div class="d-md-flex justify-content-between align-items-center ">
+            <div class="introbanner_title col-md-2   ">
+                <h2 class="fs-4 text-light fw-bold my-3 pt-6">手把手帶你<br>親自到家教到會</h2>
                 <div class="borderbottom"></div>
             </div>
             <div class="container">
                 <ul class="d-md-flex justify-content-between mb-0">
-                    <li class="col-md-4 col-sm-1">
-                        <div class="card">
+                    <li class="col-md-4 col-sm-12 ">
+                        <div class="card ">
                             <span class="material-symbols-outlined fs-1 text-center p-2 icon">
                                 code
                                 </span>
@@ -40,8 +40,8 @@ engine: ejs
                             <p class="fs-8 text-light text-center">學習標準化的電腦形式語言<br>培養運算思維和邏輯素養</p>
                         </div>
                     </li>
-                    <li class="col-md-4 col-sm-1">
-                        <div class=" card">
+                    <li class="col-md-4 col-sm-12 ">
+                        <div class=" card ">
                             <span class="material-symbols-outlined fs-1 text-center p-2 icon">
                                 rocket_launch
                                 </span>
@@ -49,7 +49,7 @@ engine: ejs
                             <p class="fs-8 text-light text-center">客製化專屬課表<br>讓學習變簡單</p>
                         </div>
                     </li>
-                    <li class="col-md-4 col-sm-1">
+                    <li class="col-md-4 col-sm-12">
                         <div class=" card">
                             <span class="material-symbols-outlined fs-1 text-center p-2 icon">
                                 location_on
@@ -69,28 +69,28 @@ engine: ejs
         <h2 class="fw-bold fs-4 text-light text-center title">預期上課流程</h2>
 
         <div class="row my-6">
-            <div class="col-md-3">
+            <div class="col-md-3 mb-3">
                 <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">01</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">預約</h4>
                     <p class="text-light fs-8 pb-2 ">線上預約指定課程與老師<br>由老師安排專屬課程</p>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 mb-3">
                 <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">02</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">付款</h4>
                     <p class="text-light fs-8 pb-2 ">支援各種支付方式<br>提供12期分期付款</p>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 mb-3">
                 <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">03</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">上課</h4>
                     <p class="text-light fs-8 pb-2 ">地點由您指定 <br>密集性一對一教學</p>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 mb-3">
                 <div class="card border px-5 position-relative mb-5">
                     <h3 class="fs-1 fw-bold text-primary px-1 position-absolute top-0 start-30 translate-middle">04</h3>
                     <h4 class="text-light fs-6 fw-bold pt-6 pb-3">提供滿意度</h4>
@@ -122,9 +122,9 @@ engine: ejs
 <section class="hotclass my-6">
     <h2 class="fw-bold fs-4 text-light text-center title">熱門推薦課程</h2>
     <div class="container">
-        <div class="row mt-6  ">
-            <div class="col-md-3 mb-3">
-                <div class="card text-light  ">
+        <div class="row mt-6">
+            <div class="col-md-3 mb-3 col-sm-12">
+                <div class="card text-light mb-5  mt-6">
                         <div class="teacherinfo text-center pt-3">
                             <img src="./assets/images/teacher01.jpg" alt="">
                             <p class="fs-8 p-2">Belinda</p>
@@ -344,7 +344,7 @@ engine: ejs
                       <span class="visually-hidden ">Next</span>
                     </button>
                   </div>
-                  <div class="studentcard  ">
+                  <div class="studentcard">
                     <div class="cards2 position-absolute position-relative" >
                         <img src="./assets/images/student01.jpg" alt="" class="rounded-circle position-absolute top-0 translate-middle">
                         <div class="card-body p-4 my-auto">
