--- a/app/index.html
+++ b/app/index.html
@@ -103,8 +103,9 @@ engine: ejs
 </section>
 
 <section class="programbanner  py-6">
-    <h2 class="fw-bold fs-4 text-light text-center title">你想要學習的程式，都在這裡</h2>
-    <div class="codebar mt-6 text-center d-md-flex multiple-items">
+     <h2 class="fw-bold fs-4 text-light text-center title">你想要學習的程式，都在這裡</h2>
+
+     <!-- <div class="codebar mt-6 text-center d-md-flex multiple-items">
         <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">JavaScript</button>
         <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">HTML/CSS</button>
         <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">SQL</button>
@@ -116,7 +117,7 @@ engine: ejs
         <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
         <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
         <button class="btn btn-outline-light p-5 mx-2 fw-bold" type="button">Java</button>
-    </div>
+    </div>  -->
 </section>
 
 <section class="hotclass my-6">
